--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nocamel",
-  "version": "0.0.2",
-  "description": "Don't want camelCase in your JS & Node? Good, me neither.",
+  "version": "0.0.3",
+  "description": "Don't want camelCase in your Javascript & Node.js? Good, me neither.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
